Make company#show view responsive. TODO: fix masonry on mobile

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -239,11 +239,16 @@ input[type="file"]{
     }
   }
   .navbar-inner{
-    border-bottom:none;
     .box-shadow(none);
     .border-radius(0px);
-    padding:0 15px 0 15px;
+    border-left: none;
+    border-right: none;
   }
+}
+.nav-collapse-border-div {
+  border-left: 1px solid #cecece;
+  height: 40px;
+  width: 1px;
 }
 .clear {
   clear: both;
@@ -251,11 +256,4 @@ input[type="file"]{
   line-height: 0;
   font-size: 0;
   display: block;
-}
-
-
-@media (max-width: 940px) {
-  .navbar-fixed-top .container {
-    width: auto !important;
-  }
 }
