--- a/app/assets/stylesheets/dashboard.css.less
+++ b/app/assets/stylesheets/dashboard.css.less
@@ -3,7 +3,6 @@
 @import "variables.css.less";
 
 #dashboard{
-  margin-top:20px;
   section.highlight {
     padding: 20px;
     .border-radius(0px);
