--- a/app/assets/stylesheets/media_query_overrides.css.less
+++ b/app/assets/stylesheets/media_query_overrides.css.less
@@ -4,6 +4,20 @@
 
 
 /* Begin custom rules*/
+@media (max-width: 940px) {
+  .navbar-fixed-top .container {
+    width: auto !important;
+  }
+}
+@media (min-width: 571px) {
+  .navbar-inner {
+    padding: 0 15px;
+    border-bottom:none;
+  }
+  .nav-collapse-border-div {
+    display: none;
+  }
+}
 @media (max-width:570px) {
   h1{
     font-size:30px;
@@ -30,13 +44,21 @@
     }
   }
   .mobile-padding{
-    padding:0 10px 0 10px;
+    padding:0 5px;
+  }
+  .navbar-inner {
+    padding: 0 5px;
+  }
+  .navbar {
+    margin-bottom: 0 !important;
+    .btn-navbar {
+      margin-right: 0 !important;
+    }
   }
   .navbar-fixed-top{
     margin:0;
     .navbar-inner{
       background-image:none;
-      // background-color:@grayLighter;
     }
     .nav > li > a {
       padding-top:7px;
